force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__Adjust_Sched_Date_on_Assignment_Close__c.field-meta.xml
<CustomField>
    <fullName>pse__Adjust_Sched_Date_on_Assignment_Close__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated - not used</description>
    <inlineHelpText>Deprecated - not used</inlineHelpText>
    <label>Adjust Sched Date on Assignment Close</label>
    <type>Checkbox</type>
</CustomField>