force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__Assign_Resource_Custom_Lookup__c.field-meta.xml
<CustomField>
    <fullName>pse__Assign_Resource_Custom_Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign Resource Custom Lookup</label>
    <type>Checkbox</type>
</CustomField>