force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__Assign_Resource_Milestone_Lookup__c.field-meta.xml
<CustomField>
    <fullName>pse__Assign_Resource_Milestone_Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to control display of custom milestone lookup on UI</description>
    <inlineHelpText>Field to control display of custom milestone lookup on UI</inlineHelpText>
    <label>Assign Resource Milestone Lookup</label>
    <type>Checkbox</type>
</CustomField>