force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__Assign_Resource_Milestone_Required__c.field-meta.xml
<CustomField>
    <fullName>pse__Assign_Resource_Milestone_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to mark custom milestone as required or not. If true, it is will be required and else not.</description>
    <inlineHelpText>Field to mark custom milestone as required or not. If true, it is will be required and else not.</inlineHelpText>
    <label>Assign Resource Milestone Required</label>
    <type>Checkbox</type>
</CustomField>