force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__Assignment_Closed_Statuses__c.field-meta.xml
<CustomField>
    <fullName>pse__Assignment_Closed_Statuses__c</fullName>
    <defaultValue>&apos;Closed&apos;</defaultValue>
    <description>Deprecated - not used</description>
    <inlineHelpText>Deprecated - not used</inlineHelpText>
    <label>Assignment Closed Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>