force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__AssigRes_Is_Resource_Lookup_Filter__c.field-meta.xml
<CustomField>
    <fullName>pse__AssigRes_Is_Resource_Lookup_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AssigRes Is Resource Lookup Filter</label>
    <type>Checkbox</type>
</CustomField>