force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__AssigRes_IsResource_Active_Lookup_FIlter__c.field-meta.xml
<CustomField>
    <fullName>pse__AssigRes_IsResource_Active_Lookup_FIlter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AssigRes IsResource Active Lookup FIlter</label>
    <type>Checkbox</type>
</CustomField>