force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__Delete_Share_from_Old_Resource__c.field-meta.xml
<CustomField>
    <fullName>pse__Delete_Share_from_Old_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines whether the existing share of the assignment and schedule with the resource&apos;s Salesforce user is deleted when the resource on the assignment is changed.</description>
    <inlineHelpText>Defines whether the existing share of the assignment and schedule with the resource&apos;s Salesforce user is deleted when the resource on the assignment is changed.</inlineHelpText>
    <label>Delete Share from Old Resource</label>
    <type>Checkbox</type>
</CustomField>