force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__Disable_Bill_Rate_Null_Check_in_Trigger__c.field-meta.xml
<CustomField>
    <fullName>pse__Disable_Bill_Rate_Null_Check_in_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When selected, PSA does not check that bill rates have been applied.</description>
    <inlineHelpText>When selected, PSA does not check that bill rates have been applied.</inlineHelpText>
    <label>Disable Bill Rate Null Check in Trigger</label>
    <type>Checkbox</type>
</CustomField>