force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__Disable_RPG_Role_Defaulting__c.field-meta.xml
<CustomField>
    <fullName>pse__Disable_RPG_Role_Defaulting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables the default values for the Region, Practice, Group, and Role filters on the Assign Resource page.</description>
    <inlineHelpText>Disables the default values for the Region, Practice, Group, and Role filters on the Assign Resource page.</inlineHelpText>
    <label>Disable RPG and Role Filter Defaults</label>
    <type>Checkbox</type>
</CustomField>