force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__Hide_Ignore_Avail_Scheduling_Strategy__c.field-meta.xml
<CustomField>
    <fullName>pse__Hide_Ignore_Avail_Scheduling_Strategy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Calculate End Date Ignore Availability scheduling strategy is hidden on the Assign Resource to Project, Edit Assignment Schedule and Staffer Worksheet pages.</description>
    <inlineHelpText>Indicates whether the Calculate End Date Ignore Availability scheduling strategy is hidden on the Assign Resource to Project, Edit Assignment Schedule and Staffer Worksheet pages.</inlineHelpText>
    <label>Hide Ignore Avail Scheduling Strategy</label>
    <type>Checkbox</type>
</CustomField>