force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__Link_Milestone_Header_Tooltip_Fields__c.field-meta.xml
<CustomField>
    <fullName>pse__Link_Milestone_Header_Tooltip_Fields__c</fullName>
    <defaultValue>&quot;Name,Target_Date__c,Milestone_Amount__c&quot;</defaultValue>
    <description>Comma delimited list of API names of fields to be listed when hovering over the tooltip icon on the Link Milestone to Assignments page.</description>
    <inlineHelpText>Comma delimited list of API names of fields to be listed when hovering over the tooltip icon on the Link Milestone to Assignments page.</inlineHelpText>
    <label>Link Milestone Header Tooltip Fields</label>
    <type>TextArea</type>
</CustomField>