force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__Link_Phase_Header_Tooltip_Fields__c.field-meta.xml
<CustomField>
    <fullName>pse__Link_Phase_Header_Tooltip_Fields__c</fullName>
    <defaultValue>&quot;Name,project__r.name&quot;</defaultValue>
    <description>Comma delimited list of API names of fields to be listed when hovering over the tooltip icon on the Link Phase to Assignments page.</description>
    <inlineHelpText>Comma delimited list of API names of fields to be listed when hovering over the tooltip icon on the Link Phase to Assignments page.</inlineHelpText>
    <label>Link Phase Header Tooltip Fields</label>
    <type>TextArea</type>
</CustomField>