force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__Mass_Assign_Milestone_Editable__c.field-meta.xml
<CustomField>
    <fullName>pse__Mass_Assign_Milestone_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true the Milestone field is shown in the quick update section and assignment detail section of the Mass Assign Resources to Project page. The field is also shown on the Mass Assign Projects to Resource page.</description>
    <inlineHelpText>When true the Milestone field is shown in the quick update section and assignment detail section of the Mass Assign Resources to Project page. The field is also shown on the Mass Assign Projects to Resource page.</inlineHelpText>
    <label>Mass Assign Milestone Editable</label>
    <type>Checkbox</type>
</CustomField>