force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__Retain_schedule_exceptions_on_update__c.field-meta.xml
<CustomField>
    <fullName>pse__Retain_schedule_exceptions_on_update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, schedule exceptions are retained on update in the Edit Assignment Schedule screen. When false, exceptions are deleted. Default value is false.</description>
    <inlineHelpText>When true, schedule exceptions are retained on update in the Edit Assignment Schedule screen. When false, exceptions are deleted. Default value is false.</inlineHelpText>
    <label>Retain schedule exceptions on update</label>
    <type>Checkbox</type>
</CustomField>