force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__Role_Hidden__c.field-meta.xml
<CustomField>
    <fullName>pse__Role_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to true, the Role pick list field is hidden from the Assign Resource(s) to Project page. If set to false, existing behavior continues. It will work only when &quot;Role Required on Creation&quot; checkbox is set to false</description>
    <inlineHelpText>If set to true, the Role pick list field is hidden from the Assign Resource(s) to Project page. If set to false, existing behavior continues.It will work only when &quot;Role Required on Creation&quot; checkbox is set to false</inlineHelpText>
    <label>Role Hidden</label>
    <type>Checkbox</type>
</CustomField>