force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__Use_Default_Cost_Rate_Clear_on_Assigning__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_Default_Cost_Rate_Clear_on_Assigning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the default value of the Use Default Cost Rate checkbox is unchecked on the Assign Resource to Project, Mass Assign Resources to Project and Mass Assign Projects To Resource pages.</description>
    <inlineHelpText>Indicates whether the default value of the Use Default Cost Rate checkbox is unchecked on the Assign Resource to Project, Mass Assign Resources to Project and Mass Assign Projects To Resource pages.</inlineHelpText>
    <label>Use Default Cost Rate Clear on Assigning</label>
    <type>Checkbox</type>
</CustomField>