force-app/main/default/objects/pse__Assignment_Settings__c/fields/pse__Use_Scheduled_Days__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_Scheduled_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use the value recorded in the Scheduled Days field on assignments for calculations on the Project Cost and Revenue Summary.</description>
    <inlineHelpText>Use the value recorded in the Scheduled Days field on assignments for calculations on the Project Cost and Revenue Summary.</inlineHelpText>
    <label>Use Scheduled Days for Calculations</label>
    <type>Checkbox</type>
</CustomField>